--- a/kgui/hubwidget.ui
+++ b/kgui/hubwidget.ui
@@ -23,7 +23,11 @@
        <enum>QTextEdit::NoWrap</enum>
       </property>
      </widget>
-     <widget class="QListView" name="pUsers" />
+     <widget class="QTreeView" name="pUsers" >
+      <property name="rootIsDecorated" >
+       <bool>false</bool>
+      </property>
+     </widget>
     </widget>
    </item>
   </layout>
