Added TCP listener and ability to download file in active mode (currently only file list). BZ2 decompression added. Painfully slow and not resistant to errors.

--- a/kgui/hubwidget.ui
+++ b/kgui/hubwidget.ui
@@ -24,6 +24,9 @@
       </property>
      </widget>
      <widget class="QTreeView" name="pUsers" >
+      <property name="contextMenuPolicy" >
+       <enum>Qt::CustomContextMenu</enum>
+      </property>
       <property name="rootIsDecorated" >
        <bool>false</bool>
       </property>
