--- a/trunk/kgui/hubwidget.ui
+++ b/trunk/kgui/hubwidget.ui
@@ -24,6 +24,9 @@
       </property>
      </widget>
      <widget class="QTreeView" name="pUsers" >
+      <property name="contextMenuPolicy" >
+       <enum>Qt::CustomContextMenu</enum>
+      </property>
       <property name="rootIsDecorated" >
        <bool>false</bool>
       </property>
