First look at the transfer manager

--- a/kgui/transferwidget.ui
+++ b/kgui/transferwidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>490</width>
+    <height>334</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -34,6 +34,11 @@
      <column>
       <property name="text">
        <string>Time left</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>TTH</string>
       </property>
      </column>
     </widget>
