--- a/kgui/transferwidget.ui
+++ b/kgui/transferwidget.ui
@@ -16,6 +16,12 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QTreeWidget" name="pTree">
+     <property name="sortingEnabled">
+      <bool>true</bool>
+     </property>
+     <property name="allColumnsShowFocus">
+      <bool>true</bool>
+     </property>
      <column>
       <property name="text">
        <string>Name</string>
