--- a/trunk/kgui/transferwidget.ui
+++ b/trunk/kgui/transferwidget.ui
@@ -16,6 +16,9 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QTreeWidget" name="pTree">
+     <property name="contextMenuPolicy">
+      <enum>Qt::CustomContextMenu</enum>
+     </property>
      <property name="sortingEnabled">
       <bool>true</bool>
      </property>
