--- a/trunk/kgui/hubwidget.ui
+++ b/trunk/kgui/hubwidget.ui
@@ -30,6 +30,9 @@
       <property name="contextMenuPolicy">
        <enum>Qt::CustomContextMenu</enum>
       </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
       <property name="rootIsDecorated">
        <bool>false</bool>
       </property>
@@ -39,9 +42,6 @@
       <property name="allColumnsShowFocus">
        <bool>true</bool>
       </property>
-      <attribute name="headerShowSortIndicator" stdset="0">
-       <bool>true</bool>
-      </attribute>
       <attribute name="headerShowSortIndicator" stdset="0">
        <bool>true</bool>
       </attribute>
